reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__struct_with_serde_skip.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "super::into_schema::<TestStructWithSerdeSkip>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::serde::TestStructWithSerdeSkip"
      },
      "output_type": {
        "name": "reflect_demo::tests::serde::TestStructWithSerdeSkip"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::serde::TestStructWithSerdeSkip"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::serde::TestStructWithSerdeSkip"
      }
    ]
  }
}
