reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__struct_with_serde_skip_deserialize-2.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "super::into_typescript_code::<TestStructWithSerdeSkipDeserialize>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflect-cli
//
// Schema name: 
// 




/// 8-bit unsigned integer
export type u8 = TODO;


export namespace reflect {

/// Struct object with no fields
export interface Empty {
    }


/// Error object which is expected to be never returned
export interface Infallible {
    }

}

export namespace reflect_demo {

export namespace tests {

export namespace serde {

export namespace input {

export interface TestStructWithSerdeSkipDeserialize {
    }

}

export namespace output {

export interface TestStructWithSerdeSkipDeserialize {
    f: u8;
    }

}
}
}
}
