reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__struct_with_serde_skip_deserialize.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "super::into_schema::<TestStructWithSerdeSkipDeserialize>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::serde::TestStructWithSerdeSkipDeserialize"
      },
      "output_type": {
        "name": "reflect_demo::tests::serde::TestStructWithSerdeSkipDeserialize"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::serde::TestStructWithSerdeSkipDeserialize"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::serde::TestStructWithSerdeSkipDeserialize",
        "fields": [
          {
            "name": "f",
            "type": {
              "name": "u8"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
