reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__struct_with_serde_skip_serialize.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "super::into_schema::<TestStructWithSerdeSkipSerialize>()"
---
{
  "name": "",
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::serde::TestStructWithSerdeSkipSerialize",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "u8"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::serde::TestStructWithSerdeSkipSerialize"
      }
    ]
  }
}
